# docs/swagger.yaml
@@ -1,5 +1,31 @@
 basePath: /
 definitions:
+  advert_model.Advert:
+    properties:
+      body:
+        type: string
+      id:
+        type: string
+      image:
+        type: string
+      price:
+        type: integer
+      title:
+        type: string
+      user_id:
+        type: string
+    type: object
+  advert_model.AdvertInput:
+    properties:
+      body:
+        type: string
+      image:
+        type: string
+      price:
+        type: integer
+      title:
+        type: string
+    type: object
   transport.RespWriter:
     properties:
       message:
@@ -25,6 +51,40 @@ info:
   description: API server for Маркетплейс
   title: Маркетплейс
 paths:
+  /advert/add:
+    post:
+      consumes:
+      - application/json
+      description: Добавление объявления в систему. Добавлять могут только авторизованные
+        пользователи.
+      operationId: add-advert
+      parameters:
+      - description: advert fields
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/advert_model.AdvertInput'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/advert_model.Advert'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/transport.RespWriter'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/transport.RespWriter'
+      security:
+      - ApiKeyAuth: []
+      summary: AddAdvert
+      tags:
+      - advert
   /login:
     post:
       consumes:
